# clientcloak

./: .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY_REVIEW.md  TRADEMARKS.md  pyproject.toml  tailwind.config.js
.github/workflows/: ci.yml  security.yml
scripts/: launch.sh
src/clientcloak/: __init__.py  __main__.py  cli.py  cloaker.py  comments.py  detector.py  docx_handler.py  mapping.py  metadata.py  models.py  onnx_ner.py  paths.py  security.py  sessions.py  uncloaker.py
src/clientcloak/ui/: app.py  desktop.py
src/clientcloak/ui/routes/: cloak.py  uncloak.py
src/clientcloak/ui/static/: app.js  style.css  tailwind.css
src/clientcloak/ui/templates/: base.html  index.html
tests/: conftest.py  test_api.py  test_cli.py  test_cloaker_fixes.py  test_comments.py  test_detector.py  test_docx_handler.py  test_leakage.py  test_mapping.py  test_metadata.py  test_onnx_ner.py  test_roundtrip.py  test_security.py  test_sessions.py
tests/fixtures/: MakingReign_SoftwareExperts_Consulting_Agreement.docx  sample_contract.docx  sample_contract_cloaked.docx  sample_contract_cloaked_uncloaked.docx
